@@ -1,4 +1,5 @@
 0.02
+ - Add tests for TIEHASH.
 
 0.01 2014-11-27T20:00:34+01:00
  - First version.
